--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,40 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'dependencies.gradle'
 
 buildscript {
-    
-    repositories {
-        google()
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
-        
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+  repositories {
+    google()
+    jcenter()
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:3.0.0'
+
+    // NOTE: Do not place your application dependencies here; they belong
+    // in the individual module build.gradle files
+  }
 }
 
 allprojects {
-    repositories {
-        google()
-        jcenter()
-    }
+  repositories {
+    google()
+    jcenter()
+  }
 }
 
 task clean(type: Delete) {
-    delete rootProject.buildDir
+  delete rootProject.buildDir
+}
+ext {
+  //sdk and tool
+  compileSdkVersion = 27
+  buildToolsVersion = '27.0.0'
+  minSdkVersion = 16
+  targetSdkVersion = 27
+
+  // Version code & name
+  versionCode = 1
+  versionName = '1.0.0'
+  versionCodeRelease = 1
+  versionNameRelease = '1.0.0'
 }
