[Sprint 1] Init Structure MVVM in Project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply from: '../autodimension.gradle'
 
-def APP_ID = "com.cccsoftware.cakezy"
+def APP_ID = "com.fstyle.cakezy"
 
 buildscript {
   repositories {
