--- a/autodimension.gradle
+++ b/autodimension.gradle
@@ -73,7 +73,7 @@ public class DimenFactory extends DefaultTask {
         Node nNode = nList.item(temp);
         if (nNode.getNodeType() == Node.ELEMENT_NODE) {
           Element eElement = (Element) nNode;
-          if (eElement.getTextContent().contains("@dimen")) continue;
+          if(eElement.getTextContent().contains("@dimen")) continue;
           pairs.put(eElement.getAttribute("name"), eElement.getTextContent())
         }
       }
@@ -115,7 +115,7 @@ public class DimenFactory extends DefaultTask {
         printWriter.close();
       }
     } catch (Exception e) {
-      //      println e.getMessage();
+//      println e.getMessage();
       e.printStackTrace();
     }
   }
@@ -326,6 +326,5 @@ createDimen {
   negativeMaxDP = 60 //change to 600 or any other value if needed
   negativeMaxSP = 20 //change to 600 or any other value if needed
   type = DimenType.FROM_DIMEN_FILE
-  dimenFileName = 'values-sw360dp/dimens.xml'
-  // name of file, for type = DimenType.FROM_DIMEN_FILE only
+  dimenFileName = 'values-sw360dp/auto_dimens.xml' // name of file, for type = DimenType.FROM_DIMEN_FILE only
 }
