--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -22,5 +22,6 @@ ext {
                   dagger2           : 'com.google.dagger:dagger:2.11',
                   dagger2Compile    : 'com.google.dagger:dagger-compiler:2.11',
                   annotation        : 'javax.annotation:javax.annotation-api:1.2',
-                  cardView          : 'com.android.support:cardview-v7:25.3.1',]
+                  cardView          : 'com.android.support:cardview-v7:25.3.1',
+                  lombok            : 'org.projectlombok:lombok:1.16.18',]
 }
